# memory_plus

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  SVM_Tech_Stack_Summary.md  config.yaml  pyproject.toml
docs/: docker-deployment-info.md  zk-integration-requirements.md
scripts/: quick-install.sh
svm/: audit.py  cli.py  config.py  exceptions.py  injector.py  mcp_server.py
svm/models/: __init__.py  block.py  bundle.py  slot.py
svm/store/: __init__.py  memory_store.py  persistent.py
svm/sync/: engine.py  zk_sync.py
svm/trigger/: __init__.py  matcher.py  strategy.py
tests/: test_basic.py  test_import.py  test_perf.py  test_sync.py
