[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_plus"
version = "0.2.1"
description = "Memory Plus - SVM (Structured Visual Memory) + Zettelkasten sync integration"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Memory Plus Contributors" },
]
keywords = ["memory", "llm", "agent", "zettelkasten", "svm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pyahocorasick>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/anomalyco/memory_plus"
Issues = "https://github.com/anomalyco/memory_plus/issues"

[project.scripts]
svm = "svm.cli:main"
